Fixed overflow css on nutrition page

--- a/NutritionPageDesktop.css
+++ b/NutritionPageDesktop.css
@@ -571,7 +571,6 @@
 	border-radius: var(--br-xs);
 	border: 1px solid var(--green-85);
 	box-sizing: border-box;
-	overflow-x: auto;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
